[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-core"
version = "0.1.0"
description = "Zero-dependency async network security and encryption library for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["encryption", "xor", "async", "network", "security", "zero-dependency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/yumurta76837850/purelink"
Issues   = "https://github.com/yumurta76837850/purelink/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
